--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,28 +1,32 @@
 version: "3"
 
 services:
-  mysql:
+  nfc-database:
     image: mysql
     networks:
-      - overlay
+      - dal-network
     environment:
       - MYSQL_MAJOR=8.0
       - MYSQL_VERSION=8.0.26-1debian10
       - MYSQL_DATABASE=nfc
       - GOSU_VERSION=1.12
-      - MYSQL_ROOT_PASSWORD
       - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      - MYSQL_ROOT_PASSWORD
     volumes:
       - database-volume:/var/lib/mysql
-  dal-backend:
-    build: .
+  nfc-dal-backend:
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
+    environment:
+      - NFC_USER_PASSWORD
     networks:
-      - overlay
+      - dal-network
     ports:
-      - "8080:8080"
+      - "8080:80"
 
 volumes:
   database-volume:
 
 networks:
-  - overlay
+  dal-network:
